--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "electron-quick-start-typescript",
+  "name": "my-electron-crasher",
   "version": "1.0.0",
+  "database": "fred",
   "description": "A minimal Electron application written with Typescript",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && node ./scripts/symbols.js && electron ./dist/src/main.js"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -15,16 +16,27 @@
     "start",
     "tutorial",
     "demo",
+    "bugsplat",
+    "crash",
+    "error",
+    "exception",
+    "crashpad",
+    "breakpad",
+    "reporting",
+    "javascript",
     "typescript"
   ],
-  "author": "GitHub",
+  "author": "BugSplat",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@bugsplat/symbol-upload": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "electron": "^13.1.5",
     "eslint": "^7.28.0",
     "typescript": "^4.3.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bugsplat-node": "^2.0.1"
+  }
 }
