--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "A minimal Electron application written with Typescript",
   "scripts": {
     "build": "tsc",
+    "postbuild": "node ./scripts/symbols.mjs",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && node ./scripts/symbols.js && electron ./dist/src/main.js"
+    "prestart": "npm run build",
+    "start": "electron ./dist/src/main.js"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -29,9 +31,10 @@
   "author": "BugSplat",
   "license": "CC0-1.0",
   "devDependencies": {
-    "@bugsplat/symbol-upload": "^3.0.0",
+    "@bugsplat/symbol-upload": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "dotenv": "^10.0.0",
     "electron": "^16.0.0",
     "eslint": "^8.2.0",
     "typescript": "^4.5.2"
