--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "dotenv": "^16.0.0",
-    "electron": "^18.2.0",
+    "electron": "^20.0.0",
     "eslint": "^8.14.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "bugsplat": "^7.1.3",
     "bugsplat-node": "^2.0.1"
   }
 }
