--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron ./dist/src/main.js",
     "prestart": "npm run build",
-    "build": "npm run build:ts && npm run build:cpp",
+    "build": "npm run build:ts",
+    "build:all": "npm run build:ts && npm run build:cpp",
     "build:ts": "npx tsc",
     "build:cpp": "cmake-js compile --debug",
     "postbuild:cpp": "copyfiles --flat ./build/Debug/addon.node ./dist && npm run dump_syms",
@@ -38,17 +39,16 @@
     "bugsplat": "^7.1.3",
     "bugsplat-node": "^2.1.0",
     "dotenv": "^16.0.3",
-    "electron": "^21.1.0",
     "node-addon-api": "^3.2.1"
   },
   "devDependencies": {
     "@bugsplat/symbol-upload": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
-    "cmake-js": "^7.1.1",
+    "cmake-js": "^7.2.1",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.0.0",
-    "electron": "^20.0.0",
+    "electron": "^23.2.0",
     "eslint": "^8.14.0",
     "node-dump-syms": "^1.2.1",
     "typescript": "^4.7.4"
