--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
   "author": "BugSplat",
   "license": "CC0-1.0",
   "dependencies": {
-    "bugsplat": "^7.1.3",
+    "bugsplat": "^8.0.0",
     "bugsplat-node": "^2.1.0",
     "dotenv": "^16.0.3",
     "node-addon-api": "^3.2.1"
   },
   "devDependencies": {
-    "@bugsplat/symbol-upload": "^4.1.1",
+    "@bugsplat/symbol-upload": "^5.0.0",
+    "@types/node": "^18.15.7",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.21.0",
     "cmake-js": "^7.2.1",
