chore: use symbol-upload dump-syms flag (#214)
* chore: use symbol-upload dump-syms flag

* chore: update deps

* chore: update README.md

* chore: update README.md

--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "build": "npm run build:ts",
     "build:all": "npm run build:ts && npm run build:cpp",
     "build:ts": "npx tsc",
-    "build:cpp": "cmake-js compile --debug",
-    "postbuild:cpp": "copyfiles --flat ./build/Debug/addon.node ./dist && npm run dump_syms",
-    "dump_syms": "node-dump-syms ./dist/addon.node > ./dist/addon.node.sym",
-    "postbuild": "node -r dotenv/config ./node_modules/@bugsplat/symbol-upload/dist/bin/index.js -d ./dist -f \"/**/*+(.js.map|.sym)\"",
+    "build:cpp": "cmake-js compile --debug && copyfiles --flat ./build/Debug/addon.node ./dist",
+    "postbuild:cpp": "node -r dotenv/config ./node_modules/@bugsplat/symbol-upload/dist/bin/index.js -d ./dist -f \"/**/*.node\" -m",
+    "postbuild:ts": "node -r dotenv/config ./node_modules/@bugsplat/symbol-upload/dist/bin/index.js -d ./dist -f \"/**/*.js.map\"",
     "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc --ext .ts ./src"
+    "lint": "npx eslint ./src"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -36,22 +35,21 @@
   "author": "BugSplat",
   "license": "CC0-1.0",
   "dependencies": {
-    "bugsplat": "^8.0.0",
-    "bugsplat-node": "^3.0.0",
+    "bugsplat": "^8.0.1",
+    "bugsplat-node": "^3.0.2",
     "dotenv": "^16.0.3",
     "node-addon-api": "^3.2.1"
   },
   "devDependencies": {
-    "@bugsplat/symbol-upload": "^6.1.4",
-    "@types/node": "^18.15.7",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@bugsplat/symbol-upload": "^8.0.5",
+    "@eslint/js": "^9.0.0",
+    "@types/node": "^20.12.7",
     "cmake-js": "^7.2.1",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.0.0",
-    "electron": "^23.2.0",
-    "eslint": "^8.14.0",
-    "node-dump-syms": "^1.2.1",
-    "typescript": "^5.0.2"
+    "electron": "^30.0.1",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0"
   }
 }
