chore: simplify symbol uploads

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build:all": "npm run build:ts && npm run build:cpp",
     "build:ts": "npx tsc",
     "build:cpp": "cmake-js compile --debug && copyfiles --flat ./build/Debug/addon.node ./dist",
-    "postbuild:cpp": "node -r dotenv/config ./node_modules/@bugsplat/symbol-upload/dist/bin/index.js -d ./dist -f \"/**/*.node\" -m",
-    "postbuild:ts": "node -r dotenv/config ./node_modules/@bugsplat/symbol-upload/dist/bin/index.js -d ./dist -f \"/**/*.js.map\"",
+    "postbuild:cpp": "npx symbol-upload -u fred@bugsplat.com -p Flintstone -d ./dist -f \"/**/*.node\" -m",
+    "postbuild:ts": "npx symbol-upload -u fred@bugsplat.com -p Flintstone -d ./dist -f \"/**/*.js.map\"",
     "watch": "tsc -w",
     "lint": "npx eslint ./src"
   },
