fix: unify database/app/version info (#215)
* fix: unify database/app/version info

* chore: simplify symbol uploads

* chore: update @bugsplat/symbol-upload

* chore: more simplifications

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build:all": "npm run build:ts && npm run build:cpp",
     "build:ts": "npx tsc",
     "build:cpp": "cmake-js compile --debug && copyfiles --flat ./build/Debug/addon.node ./dist",
-    "postbuild:cpp": "node -r dotenv/config ./node_modules/@bugsplat/symbol-upload/dist/bin/index.js -d ./dist -f \"/**/*.node\" -m",
-    "postbuild:ts": "node -r dotenv/config ./node_modules/@bugsplat/symbol-upload/dist/bin/index.js -d ./dist -f \"/**/*.js.map\"",
+    "postbuild:cpp": "npx symbol-upload -u fred@bugsplat.com -p Flintstone -d ./dist -f \"/**/*.node\" -m",
+    "postbuild:ts": "npx symbol-upload -u fred@bugsplat.com -p Flintstone -d ./dist -f \"/**/*.js.map\"",
     "watch": "tsc -w",
     "lint": "npx eslint ./src"
   },
@@ -35,13 +35,12 @@
   "author": "BugSplat",
   "license": "CC0-1.0",
   "dependencies": {
-    "bugsplat": "^8.0.1",
     "bugsplat-node": "^3.0.2",
     "dotenv": "^16.0.3",
     "node-addon-api": "^3.2.1"
   },
   "devDependencies": {
-    "@bugsplat/symbol-upload": "^8.0.5",
+    "@bugsplat/symbol-upload": "^8.0.6",
     "@eslint/js": "^9.0.0",
     "@types/node": "^20.12.7",
     "cmake-js": "^7.2.1",
